--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,7 +9,7 @@
         <p>School Email: {{schoolEmail}}</p>
         <p>Git Email : {{gitEmail}}</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" target="_blank">Samuel Steinberg</a></p>
-        <p>Click to register for updates: <img src="../../../assets/contact-images/email-png-7.jpg" alt="mail.jpg" height="30px" width="30px" (click)="showEmailRegister = true">
+        <p>Click to register for updates: <img src="../../../assets/contact-images/email-png-7.jpg" alt="mail.jpg" height="30px" width="30px" class="email-pic" (click)="showEmailRegister = true">
         </p>
     </div>
     <div class="col col-sm-5 offset-lg-2" *ngIf="showEmailRegister">
