--- a/src/app/components/user-stats/user-stats.component.html
+++ b/src/app/components/user-stats/user-stats.component.html
@@ -5,8 +5,6 @@
 </div>
 <div class="row">
     <div class="col col-lg-8 offset-lg-2">
-        <div>
-            <div>
               <div class="for-spinner col col-sm-1 offset-md-5">
                 <mat-spinner *ngIf="!resourcesLoaded"></mat-spinner>
               </div>
@@ -35,18 +33,16 @@
                   </div>
                 </div>
                 <div class="item">
-                  <div style="display:block;" *ngIf="viewsScatterChart?.length && viewsScatterChart?.length > 0">
+                  <div style="display:block;" *ngIf="viewsLineChart?.length && viewsLineChart?.length > 0">
                     <canvas baseChart 
-                        [datasets]="viewsScatterChart"
-                        [labels]="viewsScatterLabels"
-                        [options]="viewsScatterOptions"
+                        [datasets]="viewsLineChart"
+                        [labels]="viewsLineLabels"
+                        [options]="viewsLineOptions"
                         [legend]="commitLineLegend"
-                        [chartType]="scatterChartType">
+                        [chartType]="lineChartType">
                     </canvas>
                   </div>
                 </div>
                 </owl-carousel>
-            </div>
-        </div>
     </div>
 </div>
