--- a/src/app/components/repo-latest-commits/repo-latest-commits.component.html
+++ b/src/app/components/repo-latest-commits/repo-latest-commits.component.html
@@ -21,28 +21,28 @@
 </table> -->
 
 <div class="mat-elevation-z8" id="table-container">
-  <table mat-table [dataSource]="dataSource">
+  <table mat-table matSort [dataSource]="dataSource">
 
-    <ng-container matColumnDef="repo">
-      <th class="header" mat-header-cell *matHeaderCellDef> Repository Name </th>
+    <ng-container matColumnDef="repoName">
+      <th class="header" mat-header-cell *matHeaderCellDef mat-sort-header="repoName"> Repository Name </th>
       <td mat-cell *matCellDef="let element"> {{element.repoName}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="date">
-      <th class="header" mat-header-cell *matHeaderCellDef> Date </th>
+      <th class="header" mat-header-cell *matHeaderCellDef mat-sort-header="date"> Date </th>
       <td mat-cell *matCellDef="let element"> {{element.date}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="message">
-      <th class="header header-message" mat-header-cell *matHeaderCellDef> Commit Message </th>
+      <th class="header header-message" mat-header-cell *matHeaderCellDef mat-sort-header="message"> Commit Message </th>
       <td mat-cell *matCellDef="let element"> {{element.message}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="url">
-      <th class="header header-url" mat-header-cell *matHeaderCellDef> Link </th>
+      <th class="header header-url" mat-header-cell *matHeaderCellDef mat-sort-header="url"> Link </th>
       <td mat-cell *matCellDef="let element"> <a href="{{element.url}}" class="url-link" target="_blank">View Commit</a> </td>
     </ng-container>
 
