--- a/src/app/components/repo-page/repo-page.component.html
+++ b/src/app/components/repo-page/repo-page.component.html
@@ -3,7 +3,7 @@
     <h2 class="display-4 text-center">Repositories</h2>
 </div>
 
-<div class="row" *ngIf="userRepos.length > 0; else emptyBlock">
+<!--<div class="row" *ngIf="userRepos.length > 0; else emptyBlock">
     <div class="col col-sm-3" *ngFor="let repo of userRepos">
         <a (click)="viewRepoDetails(repo)">
             <div class="card text-center">
@@ -18,6 +18,29 @@
                 </div>
             </div>
         </a>
+    </div>
+</div> -->
+<div class="row" *ngIf="userRepos.length > 0; else emptyBlock">
+    <div class="col col-lg-8 offset-lg-2">
+        <owl-carousel id="carousel-main" [options]="mySlideOptions" [carouselClasses]="['owl-theme', 'sliding']">
+            <div class="item" *ngFor="let repo of userRepos">
+                <div class="col-lg-6">
+                    <a (click)="viewRepoDetails(repo)">
+                        <div class="card text-center">
+                            <div class="card-header">
+                                {{repo.name}} <span *ngIf="repo.language != null">{{" - " + repo.language}}</span>
+                            </div>
+                            <div class="card-body">
+                                {{repo.description}} <span *ngIf="repo.description == null" class="text-danger">*No description provided</span>
+                            </div>
+                            <div class="card-footer">
+                                <a href="{{repo.html_url}}" target="_blank"><button class="btn btn-info">View In GitHub</button></a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </owl-carousel>
     </div>
 </div>
 <ng-template #emptyBlock>No repos found!</ng-template>
