--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="jumbotron about">
+<div class="title-tag-container">
     <h2 class="display-2 text-center">{{title}}</h2>
 </div>
 <div class="row bio text-center" style="color:lightgray;">
