showing off git

--- a/src/app/components/welcome-bar/welcome-bar.component.html
+++ b/src/app/components/welcome-bar/welcome-bar.component.html
@@ -16,8 +16,9 @@
         <p>University of Tennessee Class of 2020</p>
         <p>DC <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px"> 
            CA <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
-           DC <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
+           MD <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
            TN <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
+           GA <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
            FL <img src="../../../assets/home-images/plane.gif" alt="plane-emoji.jpg" height="15px" width="15px">
            TX 
         </p>
