--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -1,19 +1,24 @@
-<div class="form-group">
-    <label>First Name</label>
-    <input type="text" class="form-control" required>
-</div>
-<div class="form-group">
-    <label>Last Name</label>
-    <input type="text" class="form-control" required>
-</div>
-<div class="form-group">
-    <label>Email</label>
-    <input type="email" class="form-control" required>
-</div>
-<div class="form-group">
-    <label>Phone</label>
-    <input type="tel" class="form-control">
-</div>
-<div class="submit-button"> <!-- remember to disable this if the form is invalid -->
-    <button class="btn btn-primary" type="submit">Submit</button>
+<form [formGroup]="registerForm">
+    <div class="form-group">
+        <label>First Name</label>
+        <input type="text" formControlName="firstName" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Last Name</label>
+        <input type="text" formControlName="lastName" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Email</label>
+        <input type="email" formControlName="email" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Phone</label>
+        <input type="tel" formControlName="phone" class="form-control">
+    </div>
+    <div class="submit-button"> <!-- remember to disable this if the form is invalid -->
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </div>
+</form>
+<div class="text-white">
+    {{registerForm.value | json}}
 </div>
