--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 html, .master-class {
-    background-image: url("images/background.jpg");
+    background-image: url("assets/home-images/black-fog.jpg");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
