close #34 basically all done

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col col-sm-1" style="left: calc(50% - 150px);">
+    <div class="col col-sm-1" style="left: calc(50% - 150px); color: whitesmoke;">
         <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" target="_blank" class="tip">
             <span>Continue to LinkedIn</span>
             <img id="profile-pic" border="0" alt="profile_pic.jpg" class="rounded-circle mx-auto d-block" height="350px" src="../../../assets/about-images/temp.jpg">
@@ -10,7 +10,7 @@
 <div class="title-tag-container">
     <h2 class="display-2 text-center">{{title}}</h2>
 </div>
-<div class="row bio text-center" style="color:lightgray;">
+<div class="row bio text-center" style="color:whitesmoke;">
     <div class="col col-md-8 offset-md-2">
         <br>
         <p>
