--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -8,9 +8,12 @@
     border-color: transparent;
 }
 a {
-    color: orange;
+    color: lightblue;
 }
 
 .email-pic:hover {
     cursor: pointer;
+}
+.row {
+    color: whitesmoke;
 }
