--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,9 +1,9 @@
 <div class="jumbotron"></div>
 
-<div class="row text-white">
+<div class="row">
     <div class="col col-sm-5" id="contact-field">
         <h1 class="display-2">Contact</h1>
-        <hr style="background-color:white; margin-left:0; width:35%">
+        <hr style="background-color:whitesmoke; margin-left:0; width:35%">
         <p>Personal Email: {{personalEmail}}</p>
         <p>Work Email: {{workEmail}}</p>
         <p>School Email: {{schoolEmail}}</p>
