--- a/src/app/components/email-register/email-register.component.css
+++ b/src/app/components/email-register/email-register.component.css
@@ -1,6 +1,10 @@
 .form-control {
     width: 50%;
+    background-color: whitesmoke;
 }
 .submit-button {
     padding-left: 17%;
+}
+form {
+    color: whitesmoke;
 }
