--- a/src/app/components/navigate-tab/navigate-tab.component.html
+++ b/src/app/components/navigate-tab/navigate-tab.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="background-color:transparent; box-shadow: none;">
+<div class="jumbotron" style="background-color:transparent; box-shadow: none; color: whitesmoke;">
     <h2 class="display-4 text-center">I'm Looking For...</h2>
 </div>
 <div class="row text-center justify-content-center mx-auto" id="top">
