--- a/src/app/components/repo-page/repo-page.component.css
+++ b/src/app/components/repo-page/repo-page.component.css
@@ -11,6 +11,9 @@
 .card {
     width: 250%;
 }
+.jumbotron {
+    color: whitesmoke;
+}
 .owl-theme .owl-dots .owl-dot span {
     transition: all .2s ease!important;
  }
