--- a/src/app/components/welcome-bar/welcome-bar.component.html
+++ b/src/app/components/welcome-bar/welcome-bar.component.html
@@ -6,10 +6,10 @@
     </ng-template>-->
 </div>
 
-<div class="row text-white">
+<div class="row">
     <div class="col col-sm-5" id="name">
         <h1 class="display-2">Sam Steinberg</h1>
-        <hr style="background-color:white; margin-left:0; width:50%">
+        <hr style="background-color:whitesmoke; margin-left:0; width:50%">
         <p>Associate Software Engineer</p>
         <p>Austin, TX</p>
         <p>Charles Schwab, Inc.</p>
