changed navbar and page not found components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<!-- navbar and then throw everything else in a grid -->
 <div class="container-fluid">
   <div class="row">
     <div class="col col-12">
