--- a/src/app/components/repo-page/repo-page.component.css
+++ b/src/app/components/repo-page/repo-page.component.css
@@ -2,7 +2,7 @@
     padding-bottom: 10px;
 }
 .card-body {
-    height: 6em;
+    height: 6em !important;
     overflow: hidden;
 }
 .card-body:hover {
@@ -13,20 +13,4 @@
 }
 .jumbotron {
     color: whitesmoke;
-}
-.owl-theme .owl-dots .owl-dot span {
-    transition: all .2s ease!important;
- }
-.owl-theme .owl-dots .owl-dot span {
-    width: 20px;
-    height: 20px;
-    margin: 5px 7px;
-    background: red !important;
-    display: block;
-    -webkit-backface-visibility: visible;
-    transition: all .2s ease;
-    border-radius: 30px;
-}
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-    background: blue !important;
 }
