--- a/src/app/components/user-stats/user-stats.component.html
+++ b/src/app/components/user-stats/user-stats.component.html
@@ -38,7 +38,7 @@
                 <div class="item">
                   <div style="display:block;" *ngIf="viewsLineChart?.length && viewsLineChart?.length > 0">
                     <div class="justify-content-center" style="padding-left: 39%; font-size: 18px; color: whitesmoke">
-                      Total Views Since Tracking Began: {{totalViews}}
+                      Two Week View Count: {{totalViews}}
                     </div>
                     <canvas baseChart 
                         [datasets]="viewsLineChart"
