organized services under shared

--- a/src/app/components/user-stats/user-stats.component.html
+++ b/src/app/components/user-stats/user-stats.component.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="item">
                   <div style="display:block;" *ngIf="viewsLineChart?.length && viewsLineChart?.length > 0">
-                    <div class="justify-content-center" style="padding-left: 39%; font-size: 18px; color: whitesmoke">
+                    <div class="justify-content-center" style="padding-left: calc(42% - 9px); font-size: 18px; color: whitesmoke">
                       Two Week View Count: {{totalViews}}
                     </div>
                     <canvas baseChart 
