--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -22,7 +22,11 @@
     </div>
     <div class="form-group">
         <label>Email</label>
-        <input type="email" formControlName="email" class="form-control">
+        <span class="email-invalid-message" *ngIf="email.invalid && email.touched">
+            <small class="text-danger" *ngIf="email.errors?.required">*Email is a required field</small>
+            <small class="text-danger" *ngIf="email.errors?.invalidEmail"> <span *ngIf="email.errors?.invalidEmail.value.length < 35">{{email.errors?.invalidEmail.value}}</span> is invalid.</small>
+        </span>
+        <input type="email" [class.is-invalid]="email.invalid && email.touched" formControlName="email" class="form-control">
     </div>
     <div class="form-group">
         <label>Phone</label>
