#10 close #37 phone directive done and added phone validation - validation for form complete

--- a/src/app/components/email-register/email-register.component.css
+++ b/src/app/components/email-register/email-register.component.css
@@ -10,6 +10,7 @@ form {
 }
 .first-name-invalid-message,
 .last-name-invalid-message,
-.email-invalid-message {
+.email-invalid-message,
+.phone-invalid-message {
     margin-left: 2em;
 }
