#10 added description field

--- a/src/app/components/email-register/email-register.component.css
+++ b/src/app/components/email-register/email-register.component.css
@@ -11,6 +11,7 @@ form {
 .first-name-invalid-message,
 .last-name-invalid-message,
 .email-invalid-message,
-.phone-invalid-message {
+.phone-invalid-message,
+.description-invalid-message {
     margin-left: 2em;
 }
