--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,11 +9,11 @@
         <p>School Email: {{schoolEmail}}</p>
         <p>Git Email : {{gitEmail}}</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" target="_blank">Samuel Steinberg</a></p>
-        <p>Click to register for updates: <img src="../../../assets/contact-images/email-png-7.jpg" alt="mail.jpg" height="30px" width="30px" class="email-pic" (click)="showEmailRegister = true">
+        <p>Click to get in touch: <img src="../../../assets/contact-images/email-png-7.jpg" alt="mail.jpg" height="30px" width="30px" class="email-pic" (click)="showEmailRegister = true">
         </p>
     </div>
     <div class="col col-sm-5 offset-lg-2" *ngIf="showEmailRegister">
-        <h1 class="display-2 text-white">Register</h1>
+        <h1 class="display-2 text-white">Info</h1>
         <hr style="background-color:white; margin-left:0; width:35%">
         <email-register></email-register>
     </div>
