--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm">
+<form [formGroup]="registerForm" (ngSubmit)="onFormSubmit()">
     <div class="form-group">
         <label>First Name</label>
         <!--in line with label on page-->
@@ -32,11 +32,19 @@
         <label>Phone</label>
         <span class="phone-invalid-message" *ngIf="phone.invalid && phone.touched">
             <small class="text-danger" *ngIf="phone.errors?.phoneLengthError">{{phone.errors?.phoneLengthError.value}}</small>
+            <small class="text-danger" *ngIf="phone.errors?.required">*Phone number field is required</small>
         </span>
         <input mask-phone-number [class.is-invalid]="phone.invalid && phone.touched" ngControl="phone" type="text" formControlName="phone" class="form-control" maxlength="16">
         <small class="text-info">Please enter in (111)-111-1111 format</small>
     </div>
+    <div class="form-group">
+        <label>Description (Not Required)</label>
+        <span class="description-invalid-message" *ngIf="description.invalid && description.touched">
+            <small class="text-danger" *ngIf="description.errors?.maxlength">*Description must be under 100 characters</small>
+        </span>
+        <textarea [class.is-invalid]="description.invalid && description.touched" formControlName="description" name="tarea" cols="30" rows="10" class="form-control"></textarea>
+    </div>
     <div class="submit-button"> <!-- remember to disable this if the form is invalid -->
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" [disabled]="!registerForm.valid" type="submit">Submit</button>
     </div>
 </form>
