--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -25,6 +25,7 @@
         <span class="email-invalid-message" *ngIf="email.invalid && email.touched">
             <small class="text-danger" *ngIf="email.errors?.required">*Email is a required field</small>
             <small class="text-danger" *ngIf="email.errors?.invalidEmail"> <span *ngIf="email.errors?.invalidEmail.value.length < 35">{{email.errors?.invalidEmail.value}}</span> is invalid.</small>
+            <small class="text-danger" *ngIf="email.errors?.maxlength">*Maximum of 320 characters for an email!</small>
         </span>
         <input type="email" [class.is-invalid]="email.invalid && email.touched" formControlName="email" class="form-control">
     </div>
