--- a/src/app/components/welcome-bar/welcome-bar.component.html
+++ b/src/app/components/welcome-bar/welcome-bar.component.html
@@ -23,7 +23,7 @@
            TX 
         </p>
         <p>A collection of some of my work and interests. Public GitHub repos only, mainly from academia.
-            Feel free to get in touch with questions or to offer feedback on the site.
+            Feel free to get in touch with questions or to offer feedback on the site <a routerLink="/contact">here</a>.
         </p>
     </div>
 </div>
