close #10, close #41, close #43 all done w these

--- a/src/app/components/repo-page/repo-page.component.css
+++ b/src/app/components/repo-page/repo-page.component.css
@@ -14,3 +14,9 @@
 .jumbotron {
     color: whitesmoke;
 }
+.mat-progress-bar {
+    width: 75%;
+}
+::ng-deep .mat-progress-bar-buffer {
+    background: #E4E8EB;
+}
