--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -53,7 +53,7 @@
     <span class="text-danger">Feedback failed to submit!</span>
 </div>
 <div class="form-success" *ngIf="submitSuccess === true && responseComplete">
-    <span class="text-success">Feedback submitted!</span>
+    <span class="text-success" id="successful-message" (click)="closeInfo()">Feedback submitted! Click to close.</span>
 </div>
 <div *ngIf="!responseComplete">
     <mat-progress-bar mode="indeterminate" style="width: 50%;"></mat-progress-bar>
