close #44 no need, fixed broken link in Navigation tab

--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -4,9 +4,9 @@
         <!--in line with label on page-->
         <span class="first-name-invalid-message" *ngIf="firstName.invalid && firstName.touched" style="overflow:hidden;">
             <small class="text-danger" *ngIf="firstName.errors?.required">*First Name is a required field</small>
-            <small class="text-danger" *ngIf="firstName.errors?.minlength || firstName.errors?.maxlength">*First Name must be between 3 and 15 characters</small>
-            <small class="text-danger" *ngIf="firstName.errors?.invalidName"><span *ngIf="firstName.errors?.invalidName.value.length < 25">{{firstName.errors?.invalidName.value}}</span> is not allowed as a name.</small>
-            <small class="text-danger" *ngIf="firstName.errors?.numberName"> <span *ngIf="firstName.errors?.numberName.value.length < 25">{{firstName.errors?.numberName.value}}</span> has numeric values.</small>
+            <small class="text-danger" *ngIf="firstName.errors?.minlength || firstName.errors?.maxlength">*First Name must be between 3 and 15 characters </small>
+            <small class="text-danger" *ngIf="firstName.errors?.invalidName"><span *ngIf="firstName.errors?.invalidName.value.length < 25">'{{firstName.errors?.invalidName.value}}' </span> is not allowed as a name. </small>
+            <small class="text-danger" *ngIf="firstName.errors?.numberName"> <span *ngIf="firstName.errors?.numberName.value.length < 25">'{{firstName.errors?.numberName.value}}'</span> has numeric values.</small>
         </span>
         <input type="text" [class.is-invalid]="firstName.invalid && firstName.touched" formControlName="firstName" class="form-control">
     </div>
@@ -14,9 +14,9 @@
         <label>Last Name</label>
         <span class="last-name-invalid-message" *ngIf="lastName.invalid && lastName.touched">
             <small class="text-danger" *ngIf="lastName.errors?.required">*Last Name is a required field</small>
-            <small class="text-danger" *ngIf="lastName.errors?.minlength || lastName.errors?.maxlength">*Last Name must be between 2 and 30 characters</small>
-            <small class="text-danger" *ngIf="lastName.errors?.invalidName"><span *ngIf="lastName.errors?.invalidName.value.length < 35">{{lastName.errors?.invalidName.value}}</span> is not allowed as a name.</small>
-            <small class="text-danger" *ngIf="lastName.errors?.numberName"> <span *ngIf="lastName.errors?.numberName.value.length < 35">{{lastName.errors?.numberName.value}}</span> has numeric values.</small>
+            <small class="text-danger" *ngIf="lastName.errors?.minlength || lastName.errors?.maxlength">*Last Name must be between 2 and 30 characters </small>
+            <small class="text-danger" *ngIf="lastName.errors?.invalidName"><span *ngIf="lastName.errors?.invalidName.value.length < 35">'{{lastName.errors?.invalidName.value}}'</span> is not allowed as a name. </small>
+            <small class="text-danger" *ngIf="lastName.errors?.numberName"> <span *ngIf="lastName.errors?.numberName.value.length < 35">'{{lastName.errors?.numberName.value}}'</span> has numeric values.</small>
         </span>
         <input type="text" [class.is-invalid]="lastName.invalid && lastName.touched" formControlName="lastName" class="form-control">
     </div>
@@ -32,8 +32,8 @@
     <div class="form-group">
         <label>Phone</label>
         <span class="phone-invalid-message" *ngIf="phone.invalid && phone.touched">
+            <small class="text-danger" *ngIf="phone.errors?.required">*Phone number field is required </small>
             <small class="text-danger" *ngIf="phone.errors?.phoneLengthError">{{phone.errors?.phoneLengthError.value}}</small>
-            <small class="text-danger" *ngIf="phone.errors?.required">*Phone number field is required</small>
         </span>
         <input mask-phone-number [class.is-invalid]="phone.invalid && phone.touched" ngControl="phone" type="text" formControlName="phone" class="form-control" maxlength="16">
         <small class="text-info">Please enter in (111)-111-1111 format</small>
