--- a/src/app/components/navigate-tab/navigate-tab.component.html
+++ b/src/app/components/navigate-tab/navigate-tab.component.html
@@ -66,17 +66,17 @@
         </a>
     </div>
     <div class="col-sm-3">
-        <a routerLink="/links/register">
+        <a routerLink="/contact">
             <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front"> 
-                    Register Email Page
+                    Feedback Page
                     <div>                
                         <img src="../../../assets/navigate-images/globe-icon.jpg" alt="random_icon.jpg" height="150px">
                     </div>
                   </div>
                   <div class="flip-card-back">
-                    Register your email for site updates.
+                    Offer feedback to the site!
                   </div>
                 </div>
             </div>
