--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -56,7 +56,7 @@
     <div class="col col-sm-1 offset-sm-1" style="padding-left: 10%;">
         <div class="card text-center" style="background-color: transparent; box-shadow: none;">
             <div class="card-header" style="box-shadow: none;">
-                <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" target="_blank">
+                <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" (click)="sendToAnalytics()" target="_blank">
                     <img src="../../../assets/about-images/linkedin.png" alt="linkedin.png" class="rounded mx-auto d-block" height="100px">
                 </a>
             </div>
