close #48 added site tags

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col col-sm-1" style="left: calc(50% - 150px); color: whitesmoke;">
-        <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" target="_blank" class="tip">
+        <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" (click)="sendLinkedInAnalytics()" target="_blank" class="tip">
             <span>Continue to LinkedIn</span>
             <img id="profile-pic" border="0" alt="profile_pic.jpg" class="rounded-circle mx-auto d-block" height="350px" src="../../../assets/about-images/temp.jpg">
         </a>
@@ -38,7 +38,7 @@
     <div class="col col-sm-1 offset-sm-3">
         <div class="card text-center" style="background-color: transparent; box-shadow: none;">
             <div class="card-header" style="box-shadow: none;">
-                <a href="https://github.com/spaulsteinberg" target="_blank">
+                <a href="https://github.com/spaulsteinberg" (click)="sendGithubAnalytics()" target="_blank">
                     <img src="../../../assets/project-links-images/Git-Icon-Black.png" alt="github_logo.png" class="rounded mx-auto d-block" height="100px">
                 </a>
             </div>
@@ -47,7 +47,7 @@
     <div class="col col-sm-1 offset-sm-1" style="padding-left: 5%;">
         <div class="card text-center" style="background-color: transparent; box-shadow: none;">
             <div class="card-header" style="box-shadow: none;">
-                <a href="https://www.facebook.com/sam.steinberg.79" target="_blank">
+                <a href="https://www.facebook.com/sam.steinberg.79" (click)="sendFacebookAnalytics()" target="_blank">
                     <img src="../../../assets/about-images/facebook.png" alt="facebook.png" class="rounded mx-auto d-block" height="100px">
                 </a>
             </div>
@@ -56,7 +56,7 @@
     <div class="col col-sm-1 offset-sm-1" style="padding-left: 10%;">
         <div class="card text-center" style="background-color: transparent; box-shadow: none;">
             <div class="card-header" style="box-shadow: none;">
-                <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" (click)="sendToAnalytics()" target="_blank">
+                <a href="https://www.linkedin.com/in/samuel-steinberg-3a028b156/" (click)="sendLinkedInAnalytics()" target="_blank">
                     <img src="../../../assets/about-images/linkedin.png" alt="linkedin.png" class="rounded mx-auto d-block" height="100px">
                 </a>
             </div>
