--- a/src/app/components/repo-page/repo-page.component.html
+++ b/src/app/components/repo-page/repo-page.component.html
@@ -10,7 +10,7 @@
         <owl-carousel id="carousel-main" [options]="mySlideOptions" [carouselClasses]="['owl-theme', 'sliding']">
             <div class="item" *ngFor="let repo of userRepos">
                 <div class="col-lg-6">
-                    <a (click)="viewRepoDetails(repo)">
+                    <a (click)="logAnalytics(repo.name); viewRepoDetails(repo)">
                         <div class="card text-center">
                             <div class="card-header">
                                 {{repo.name}}
